wfnews-293 hide header and footer on print, keep styling of the page on print

--- a/client/wfnews-war/src/main/angular/src/app/app.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.scss
@@ -180,3 +180,12 @@
     }
   }
 }
+
+@media print {
+  wf-menu-bar{
+    display: none !important;
+  }
+  wf-footer{
+    display: none !important;
+  }
+}
