--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
@@ -1,123 +1,125 @@
-:host {
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
-}
+@media screen, print {
+  :host {
+    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  }
 
-.panel {
-  background-color: white;
-  padding: 22px;
-  .header-row {
-    display: flex;
-    flex-direction: row;
-    height: 35px;
-    .header-button-container {
-      margin-left: auto;
-      color: #0e5fa9;
-      font-size: 15px;
-      font-weight: 700;
+  .panel {
+    background-color: white;
+    padding: 22px;
+    .header-row {
       display: flex;
       flex-direction: row;
-      .button {
+      height: 35px;
+      .header-button-container {
+        margin-left: auto;
         color: #0e5fa9;
-        margin-top: 5px;
-        padding-right: 7px;
-        font-size: 22px;
-        cursor: pointer;
-      }
-      .icon {
-        position: relative;
-        top: 5px;
-        height: 20px;
-        padding-right: 10px;
-        .facebook {
-          color: #3b5998;
+        font-size: 15px;
+        font-weight: 700;
+        display: flex;
+        flex-direction: row;
+        .button {
+          color: #0e5fa9;
+          margin-top: 5px;
+          padding-right: 7px;
+          font-size: 22px;
+          cursor: pointer;
         }
-        .twitter {
-          color: #1da1f2;
+        .icon {
+          position: relative;
+          top: 5px;
+          height: 20px;
+          padding-right: 10px;
+          .facebook {
+            color: #3b5998;
+          }
+          .twitter {
+            color: #1da1f2;
+          }
         }
       }
     }
-  }
-  h4 {
-    margin-top: 0px;
-    font-size: 1.87rem;
-    color: black;
-    font-weight: 700;
-  }
-  .content-panel {
-    padding-top: 10px;
-    border-bottom: 1px lightgray solid;
-    h1 {
-      font-size: 1.6rem;
-      font-weight: 400;
-      color: #003366;
-    }
-    h3 {
-      font-size: 1.2rem;
+    h4 {
+      margin-top: 0px;
+      font-size: 1.87rem;
+      color: black;
       font-weight: 700;
     }
-    .content-panel-stack {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-    }
-    .content-panel-stack> * {
-      flex: 1 1 350px;
-    }
-    .content-panel-body {
-      font-size: 1rem;
-      font-weight: 400px;
-      padding-bottom: 0.67rem;
-    }
-    .content-panel-subtitle {
-      font-size: 1rem;
-      font-weight: 700;
-      padding-bottom: 0.67rem;
-      color: #003366;
-    }
-    .content-panel-link {
-      font-size: 1rem;
-      font-weight: 400px;
-      padding-bottom: 0.67rem;
-      color: #003366;
-      text-decoration: underline;
-    }
-    .learn-more-button-container {
-      margin-top: 10px;
-      margin-bottom: 25px;
-    }
-    .learn-more-button {
-      padding: 8px;
-      border: 1px solid #1a5a96;
-      border-radius: 5px;
-      color: #1a5a96;
-      font-size: 14px;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-    .learn-more-button:hover {
-      border: 1px solid #1e5d98;
-      background-color: #e0e0e0;
-    }
-    .resource-panel {
-      display: flex;
-      flex-direction: row;
-      padding-bottom: 50px;
-      .resource-panel-icon {
+    .content-panel {
+      padding-top: 10px;
+      border-bottom: 1px lightgray solid;
+      h1 {
+        font-size: 1.6rem;
+        font-weight: 400;
         color: #003366;
-        font-size: 1rem;
-        padding-left: 7px;
-        padding-right: 50px;
-        text-align: center;
-        .image-size {
-          width: 100px;
-          height: 100px;
-        }
       }
-      .resource-panel-content {
-        h3 {
-          font-size: 1.2rem;
-          font-weight: 700;
-          margin-top: 0;
+      h3 {
+        font-size: 1.2rem;
+        font-weight: 700;
+      }
+      .content-panel-stack {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+      }
+      .content-panel-stack> * {
+        flex: 1 1 350px;
+      }
+      .content-panel-body {
+        font-size: 1rem;
+        font-weight: 400px;
+        padding-bottom: 0.67rem;
+      }
+      .content-panel-subtitle {
+        font-size: 1rem;
+        font-weight: 700;
+        padding-bottom: 0.67rem;
+        color: #003366;
+      }
+      .content-panel-link {
+        font-size: 1rem;
+        font-weight: 400px;
+        padding-bottom: 0.67rem;
+        color: #003366;
+        text-decoration: underline;
+      }
+      .learn-more-button-container {
+        margin-top: 10px;
+        margin-bottom: 25px;
+      }
+      .learn-more-button {
+        padding: 8px;
+        border: 1px solid #1a5a96;
+        border-radius: 5px;
+        color: #1a5a96;
+        font-size: 14px;
+        text-decoration: none;
+        transition: 0.3s;
+      }
+      .learn-more-button:hover {
+        border: 1px solid #1e5d98;
+        background-color: #e0e0e0;
+      }
+      .resource-panel {
+        display: flex;
+        flex-direction: row;
+        padding-bottom: 50px;
+        .resource-panel-icon {
+          color: #003366;
+          font-size: 1rem;
+          padding-left: 7px;
+          padding-right: 50px;
+          text-align: center;
+          .image-size {
+            width: 100px;
+            height: 100px;
+          }
+        }
+        .resource-panel-content {
+          h3 {
+            font-size: 1.2rem;
+            font-weight: 700;
+            margin-top: 0;
+          }
         }
       }
     }
