--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.html
@@ -11,6 +11,9 @@
           <div class="item-title"><span (click)="openIncident(item)">{{item.incidentName}}</span><span #el style="cursor: pointer;" (click)="removeFromWatchlist(item)"><mat-icon style="color:#1A5A96">bookmark</mat-icon></span></div>
           <div class="item-body">{{item.lastUpdatedTimestamp}}</div>
         </div>
+        <div *ngIf="!watchlist || watchlist.length === 0" style="margin: auto;">
+          You have no items on your watchlist
+        </div>
       </div>
     </div>
     <button *ngIf="!showWatchlist" class="btn watchlist-btn" (click)="loadWatchlist()">
