--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -321,3 +321,13 @@ section {
   margin-left: -16px;
   width: calc(100% + 16px) !important;
 }
+
+::ng-deep .animated-icon {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #00000069;
+  background-color: #355992;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.65);
+  transition: all 1s;
+}
