Update print, add QR code

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -1,4 +1,4 @@
-<div class="header-container">
+<div class="header-container forPrint" id="toprint-header">
   <div class="incident-details">
     <div class="header">
     </div>
