--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isLoading && !loadingFailed" class="page" >
+<div *ngIf="!isLoading && !loadingFailed" class="page forPrint" >
   <div class="page-container">
     <div>
       <incident-header-panel [incident]="incident" [evacOrders]="evacOrders" [extent]="extent"></incident-header-panel>
