--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -3,6 +3,25 @@
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 }
 
+@media print{
+  :host {
+    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  }
+  app-root { display: block; }
+  body, html, .forPrint {
+    width: 100%;
+    height: 100%;
+  }
+
+  ::ng-deep .qr-code {
+    display: block;
+  }
+}
+
+::ng-deep .qr-code {
+  display: none;
+}
+
 :host ::ng-deep .mat-tab-group {
   background: #f3f6f9;
 }
