--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
@@ -1,3 +1,14 @@
+@media print{
+  :host {
+    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  }
+  app-root {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 :host {
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 }
