show urls on print, instead of buttons

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
@@ -46,8 +46,9 @@
         <div style="padding: 10px;"></div>
         <div class="content-panel-subtitle">What is an Evacuation Order?</div>
         <div class="content-panel-body">You are at risk. Leave the area immediately. You are encouraged to register all family members at the nearest reception centre so emergency responders know you are safe.</div>
-        <div class="learn-more-button-container no-print">
-          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/evacuee-guidance#stages" target="_blank" rel="noopener">Learn More</a>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button no-print" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/evacuee-guidance#stages" target="_blank" rel="noopener">Learn More</a>
+          <p class="show-print">Learn More: https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/evacuee-guidance#stages</p>
         </div>
       </div>
       <div>
@@ -60,8 +61,9 @@
         <div style="padding: 10px;"></div>
         <div class="content-panel-subtitle">What is an Area Restriction?</div>
         <div class="content-panel-body">Area restrictions or forest use restrictions refer to area closures or restrictions and activity restrictions necessary or desirable to limit the risk of a fire, to address a public safety concern or to avoid interference with fire control.</div>
-        <div class="learn-more-button-container no-print">
-          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions/forest-use-restrictions" target="_blank" rel="noopener">Learn More</a>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button no-print" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions/forest-use-restrictions" target="_blank" rel="noopener">Learn More</a>
+          <p class="show-print">Learn More: https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions/forest-use-restrictions</p>
         </div>
       </div>
     </div>
@@ -71,8 +73,9 @@
     <div class="content-panel-body">
       All resource information is estimated and is updated as frequently as possible, but may not accurately depict the resources deployed on an incident. The BC Wildfire Service relies on thousands of people each year to respond to wildfires. This includes fire fighters, air crews, equipment operators and support staff.
     </div>
-    <div class="learn-more-button-container no-print">
-      <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response" target="_blank" rel="noopener">Learn More</a>
+    <div class="learn-more-button-container">
+      <a class="learn-more-button no-print" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response" target="_blank" rel="noopener">Learn More</a>
+      <p class="show-print">Learn More: https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response</p>
     </div>
   </div>
   <div class="content-panel" style="border-bottom: none;">
@@ -95,8 +98,9 @@
         <div class="content-panel-body">
           <div [innerHTML]="incident.wildfireCrewResourcesDetail || 'There are currently Initial Attack and Unit Crews responding to this wildfire.'"></div>
         </div>
-        <div class="learn-more-button-container no-print">
-          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-crews" target="_blank" rel="noopener">Learn More</a>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button no-print" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-crews" target="_blank" rel="noopener">Learn More</a>
+          <p class="show-print">Learn More: https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-crews</p>
         </div>
       </div>
     </div>
@@ -110,8 +114,9 @@
         <div class="content-panel-body">
           <div [innerHTML]="incident.wildfireAviationResourceDetail || 'There are currently helicopters and/or airtankers responding to this wildfire.'"></div>
         </div>
-        <div class="learn-more-button-container no-print">
-          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-aviation" target="_blank" rel="noopener">Learn More</a>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button no-print" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-aviation" target="_blank" rel="noopener">Learn More</a>
+          <p class="show-print">Learn More: https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-aviation</p>
         </div>
       </div>
     </div>
@@ -125,8 +130,9 @@
         <div class="content-panel-body">
           <div [innerHTML]="incident.incidentMgmtCrewRsrcDetail || 'An Incident Management Team has been assigned to this wildfire.'"></div>
         </div>
-        <div class="learn-more-button-container no-print">
-          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/incident-management" target="_blank" rel="noopener">Learn More</a>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button no-print" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/incident-management" target="_blank" rel="noopener">Learn More</a>
+          <p class="show-print">Learn More: https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/incident-management</p>
         </div>
       </div>
     </div>
@@ -140,8 +146,9 @@
         <div class="content-panel-body">
           <div [innerHTML]="incident.heavyEquipmentResourcesDetail || 'There is heavy equipment responding to this wildfire.'"></div>
         </div>
-        <div class="learn-more-button-container no-print">
-          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/heavy-equipment" target="_blank" rel="noopener">Learn More</a>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button no-print" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/heavy-equipment" target="_blank" rel="noopener">Learn More</a>
+          <p class="show-print">Learn More: https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/heavy-equipment</p>
         </div>
       </div>
     </div>
@@ -155,8 +162,9 @@
         <div class="content-panel-body">
           <div [innerHTML]="incident.structureProtectionRsrcDetail || 'There are currently structure protection units responding to this incident.'"></div>
         </div>
-        <div class="learn-more-button-container no-print">
-          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/structure-protection" target="_blank" rel="noopener">Learn More</a>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button no-print" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/structure-protection" target="_blank" rel="noopener">Learn More</a>
+          <p class="show-print">Learn More: https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/structure-protection</p>
         </div>
       </div>
     </div>
