--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
@@ -155,6 +155,9 @@
     display: block;
   }
 
+  .show-print {
+    display: block !important;
+  }
   .no-print {
     display: none !important;
   }
